# advent-of-code-2024

./: CMakeLists.txt
day_01/: CMakeLists.txt  day_01.cpp
